; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/custom/extr_errno.c_cerror_nocancel.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/custom/extr_errno.c_cerror_nocancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@__TSD_ERRNO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cerror_nocancel(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  store i32 %4, i32* @errno, align 4
  %5 = load i32, i32* @__TSD_ERRNO, align 4
  %6 = call i64 @_os_tsd_get_direct(i32 %5)
  %7 = inttoptr i64 %6 to i32*
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32*, i32** %3, align 8
  store i32 %11, i32* %12, align 4
  br label %13

13:                                               ; preds = %10, %1
  ret i32 -1
}

declare dso_local i64 @_os_tsd_get_direct(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
